exo: Fix dragging regression

Capture during dragging was being set on the host window rather than the
root surface window, which would break input.

BUG=739233
TEST=ARC windows can be dragged.

Review-Url: https://codereview.chromium.org/2968783002
Cr-Commit-Position: refs/heads/master@{#484394}

Former-commit-id: 1be3dfcf77bd193032dc9b24213d96dff421de77